# agentic-receipts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-09-receipts-v2-calibrated-verifier.md
docs/superpowers/specs/: 2026-07-09-receipts-v2-design.md
src/receipts/: __init__.py  claims.py  cli.py  config.py  criteria.py  evidence.py  hook.py  judge.py  models.py  pivot_tournament.py  render.py  retry.py  scorer.py  stats.py  transcript.py  verifier.py
src/receipts/adapters/: __init__.py  base.py  claude_code.py
src/receipts/criteria/: error_signal.md  holistic.md  output_match.md  specification.md
tests/: __init__.py  test_config_v2.py  test_criteria.py  test_end_to_end.py  test_hook_phase2.py  test_hook_v2.py  test_models_v2.py  test_pivot_tournament.py  test_render_v2.py  test_retry.py  test_scorer_calls.py  test_scorer_math.py  test_stats_v2.py  test_verifier.py
tests/fixtures/: session_refuted_and_ambiguous.jsonl
