[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-receipts"
version = "0.1.0"
description = "The verified-done layer for AI coding agents. Your agent says 'Done!' — Receipts checks the work."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Harish Nair S", email = "harish.nair.ai@gmail.com" },
]
keywords = [
    "ai", "agents", "verification", "llm", "coding-agents",
    "claude-code", "evals", "ai-safety", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/harish-nair-ai/agentic-receipts"
Documentation = "https://github.com/harish-nair-ai/agentic-receipts#readme"
Repository = "https://github.com/harish-nair-ai/agentic-receipts"
Issues = "https://github.com/harish-nair-ai/agentic-receipts/issues"
Changelog = "https://github.com/harish-nair-ai/agentic-receipts/blob/main/CHANGELOG.md"

[project.scripts]
receipts = "receipts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/receipts"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["receipts"]

[tool.coverage.report]
show_missing = true
fail_under = 70
